Adding BooleanDecision logic for picking a running mate.